--- a/main.css
+++ b/main.css
@@ -37,6 +37,7 @@ button {
     width: 90px;
     height: 25px;
     border: 1px solid;
+    cursor: pointer;
 }
 button:hover {
     background-color: rgb(230, 230, 230);
